@@ -48,16 +48,20 @@ extern "C"
 }
 #else
 // from sha1.cpp
-struct TORRENT_EXTRA_EXPORT SHA_CTX
+namespace libtorrent
 {
-	boost::uint32_t state[5];
-	boost::uint32_t count[2];
-	boost::uint8_t buffer[64];
-};
 
-TORRENT_EXTRA_EXPORT void SHA1_Init(SHA_CTX* context);
-TORRENT_EXTRA_EXPORT void SHA1_Update(SHA_CTX* context, boost::uint8_t const* data, boost::uint32_t len);
-TORRENT_EXTRA_EXPORT void SHA1_Final(boost::uint8_t* digest, SHA_CTX* context);
+	struct TORRENT_EXTRA_EXPORT sha_ctx
+	{
+		boost::uint32_t state[5];
+		boost::uint32_t count[2];
+		boost::uint8_t buffer[64];
+	};
+
+	TORRENT_EXTRA_EXPORT void SHA1_init(sha_ctx* context);
+	TORRENT_EXTRA_EXPORT void SHA1_update(sha_ctx* context, boost::uint8_t const* data, boost::uint32_t len);
+	TORRENT_EXTRA_EXPORT void SHA1_final(boost::uint8_t* digest, sha_ctx* context);
+} // namespace libtorrent
 
 #endif
 
@@ -72,7 +76,7 @@ namespace libtorrent
 #ifdef TORRENT_USE_GCRYPT
 			gcry_md_open(&m_context, GCRY_MD_SHA1, 0);
 #else
-			SHA1_Init(&m_context);
+			SHA1_init(&m_context);
 #endif
 #if defined TORRENT_DEBUG || TORRENT_RELEASE_ASSERTS
 			m_finalized = false;
@@ -87,8 +91,8 @@ namespace libtorrent
 			gcry_md_open(&m_context, GCRY_MD_SHA1, 0);
 			gcry_md_write(m_context, data, len);
 #else
-			SHA1_Init(&m_context);
-			SHA1_Update(&m_context, reinterpret_cast<unsigned char const*>(data), len);
+			SHA1_init(&m_context);
+			SHA1_update(&m_context, reinterpret_cast<unsigned char const*>(data), len);
 #endif
 #if defined TORRENT_DEBUG || TORRENT_RELEASE_ASSERTS
 			m_finalized = false;
@@ -117,7 +121,7 @@ namespace libtorrent
 #ifdef TORRENT_USE_GCRYPT
 			gcry_md_write(m_context, data, len);
 #else
-			SHA1_Update(&m_context, reinterpret_cast<unsigned char const*>(data), len);
+			SHA1_update(&m_context, reinterpret_cast<unsigned char const*>(data), len);
 #endif
 		}
 
@@ -132,7 +136,7 @@ namespace libtorrent
 			gcry_md_final(m_context);
 			digest.assign((const char*)gcry_md_read(m_context, 0));
 #else
-			SHA1_Final(digest.begin(), &m_context);
+			SHA1_final(digest.begin(), &m_context);
 #endif
 			return digest;
 		}
@@ -142,7 +146,7 @@ namespace libtorrent
 #ifdef TORRENT_USE_GCRYPT
 			gcry_md_reset(m_context);
 #else
-			SHA1_Init(&m_context);
+			SHA1_init(&m_context);
 #endif
 		}
 
@@ -158,7 +162,7 @@ namespace libtorrent
 #ifdef TORRENT_USE_GCRYPT
 		gcry_md_hd_t m_context;
 #else
-		SHA_CTX m_context;
+		sha_ctx m_context;
 #endif
 
 #if defined TORRENT_DEBUG || TORRENT_RELEASE_ASSERTS
